# fitting

./: .gitignore  README.md  plot_debye_ex.ipynb  pyproject.toml  setup.py  test_debye33.ipynb  test_dielectric.ipynb
Notebooks/: bare.ipynb  dipole-volume.ipynb  test_debye33.ipynb
fitting/: __init__.py  bare.py  capacitor.py  cole_cole.py  data.py  debye.py  debye33.py  debye_9state.py  dielectric.py  path.py  programs.py  style.mplstyle  test_cole.ipynb  test_debye.ipynb  xrd.py
fitting/dielectric/: __init__.py  bare.py  calibrate.py  data.py  histogram.py  load.py  powder.py  tpp.py  variance.py
fitting/dielectric/calibration/: fit.py  load_data.py  smoothing_spline.py
fitting/xrd/: __init__.py  monoclinic.py  tpp.py
